--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ search:
 # Site
 title: Leo じゆう 
 subtitle: 码农Leo
-description: 热衷于研究底层技术
+description: 路漫漫其修远兮
 author: Leo Lin
 language: zh-CN
 # language: en
